<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.edu.newcastle.jnc985.visida.activity.MainActivity">

    <!--Include the bottom Toolbar (do this for everypage) -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitleEat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/eating"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/btnEat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MainActionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ui.AudioButton
        android:id="@+id/btnMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_bordered_audio_icon"
        android:drawableTop="@drawable/ic_btn_shared_dish_dark_grey"
        android:fontFamily="sans-serif"
        android:onClick="onClickMeal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/meal"
        android:textSize="22sp"
        app:audioFile="@raw/ab_rec_11"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizeEat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEat"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <ui.AudioButton
        android:id="@+id/btnEat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_bordered_audio_icon"
        android:drawableTop="@drawable/ic_btn_eat"
        android:fontFamily="sans-serif"
        android:onClick="onClickEat"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/snack"
        android:textSize="22sp"
        app:audioFile="@raw/ab_rec_12"
        app:layout_constraintBottom_toBottomOf="@+id/btnMeal"
        app:layout_constraintEnd_toStartOf="@+id/btnMeal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMeal" />
    <!---->

    <ui.AudioButton
        android:id="@+id/btnFinalizeEat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_bordered_audio_icon"
        android:drawableStart="@drawable/ic_btn_finalize_eat"
        android:fontFamily="sans-serif"
        android:onClick="onClickFinalizeEat"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/finalizeeat"
        android:textSize="28sp"
        app:audioFile="@raw/ab_rec_81"
        app:layout_constraintBottom_toTopOf="@id/btnCook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMeal" />

    <ui.AudioButton
        android:id="@+id/btnCook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_bordered_audio_icon"
        android:drawableStart="@drawable/ic_btn_cook"
        android:fontFamily="sans-serif"
        android:onClick="onClickCook"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/cook"
        android:textSize="28sp"
        app:audioFile="@raw/ab_rec_9"
        app:layout_constraintBottom_toTopOf="@+id/btnBreastFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFinalizeEat" />

    <ui.AudioButton
        android:id="@+id/btnBreastFeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_bordered_audio_icon"
        android:drawableStart="@drawable/breastfeeding"
        android:fontFamily="sans-serif"
        android:onClick="onClickBreastfeed"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/title_breastfeed"
        android:textSize="28sp"
        android:visibility="gone"
        app:audioFile="@raw/ab_rec_82"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCook" />



</androidx.constraintlayout.widget.ConstraintLayout>
